--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@
   margin: 0;
 }
 
+body {
+  font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 /* # UTILS */
 
 .container {
