--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ body {
   font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 a {
   text-decoration: none;
 }
