--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
   --teal: #20b2aa;
   --aquamarine: #7fffd4;
   --lightpink: #ffb6c1;
+  --royalblue: #3161e0;
 }
 
 * {
@@ -63,6 +64,10 @@ a {
   align-items: center;
 }
 
+.text-white {
+  color: white;
+}
+
 /* # HEADER */
 
 header {
@@ -71,6 +76,14 @@ header {
 
 .list-oriz > li {
   display: inline;
+}
+
+.text-white a {
+  color: white;
+}
+
+.bg-royalblue {
+  background-color: var(--royalblue);
 }
 
 /* # JUMBOTRON */
