--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   --aquamarine: #7fffd4;
   --lightpink: #ffb6c1;
   --royalblue: #3161e0;
+  --bigger: 3rem;
 }
 
 * {
@@ -68,6 +69,14 @@ a {
   color: white;
 }
 
+.bigger {
+  font-size: var(--bigger);
+}
+
+.text-center {
+  text-align: center;
+}
+
 /* # HEADER */
 
 header {
@@ -89,6 +98,10 @@ header {
 /* # JUMBOTRON */
 
 .jumbotron {
+  background-image: url(../img/jumbo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   min-height: 400px;
   padding: 2rem 0;
   display: flex;
