--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ div.flex > .btn {
   margin: 20px 10px;
 }
 
+.jumbotron .container > * {
+  padding: 10px;
+}
+
 /* # SECTIONS */
 
 section.bg-white {
