--- a/css/style.css
+++ b/css/style.css
@@ -206,13 +206,16 @@ section.bg-lightgrey {
   background-color: var(--darkgray);
 }
 
-.footer-top {
-  border: 1px solid var(--gray);
+.footer-top .container {
+  border-bottom: 1px solid var(--royalblue);
 }
 
-.footer-top,
-.footer-bottom {
+.footer-top {
   padding: 2rem 0;
+}
+
+.footer-bottom {
+  padding-bottom: 2rem;
 }
 
 .footer-bottom > .container > * {
