--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,19 @@ ul.list-none > li {
   padding: 10px 0;
 }
 
+/* Wave */
+
+.wave {
+  background-image: url("../img/wave.svg");
+  min-height: 100px;
+  filter: brightness(0) saturate(100%) invert(88%) sepia(76%) saturate(4718%)
+    hue-rotate(184deg) brightness(126%) contrast(92%);
+}
+
+.wave:nth-of-type(even) {
+  rotate: 180deg;
+}
+
 /* ! DEBUG */
 /*
 .debug .bordered {
